Checkstyle and IntelliJ
Used IntelliJ for Problem solving and Checkstyle.