@@ -41,39 +41,31 @@ import no.ntnu.idatt2003.model.tile.PropertyTile;
 import no.ntnu.idatt2003.model.tile.Tile;
 
 /**
- * This class is the view for the Monopoly game. It handles the layout and display of the game board,
+ * This class is the view for the Monopoly game. It handles the layout and display of the game
+ * board,
  */
 public class MonopolyView implements PositionChangeObserver {
 
   /**
-   * The generic game view.
-   */
-  public GenericGameView genericGameView = new GenericGameView();
-  /**
    * The game instance.
    */
   private Game game;
+
   /**
    * The size of the player pieces.
    */
   private final int playerSize = 25;
-  /**
-   * The pivot point for rotating the player pieces.
-   */
-  private final int pivotX = playerSize / 2;
-  /**
-   * The pivot point for rotating the player pieces.
-   */
-  private final int pivotY = playerSize;
 
   /**
    * The Monopoly controller.
    */
   MonopolyController monopolyController = new MonopolyController();
+
   /**
    * The main layout borderpane.
    */
   public BorderPane mainLayout = new BorderPane();
+
   /**
    * The main pane for the game board.
    */
@@ -106,7 +98,7 @@ public class MonopolyView implements PositionChangeObserver {
         currentStage.setScene(mainMenuScene);
         currentStage.setTitle("Main Menu");
       } catch (IOException ex) {
-        ex.printStackTrace();
+        PopupView.showInfoPopup("Error loading style sheet!", ex.getMessage());
       }
     });
     topMenu.getChildren().addAll(newGameButton, backToMenuButton);
@@ -213,7 +205,8 @@ public class MonopolyView implements PositionChangeObserver {
       playerImage.setFitWidth(playerSize);
       playerImage.setFitHeight(playerSize);
       //rotate by the bottom middle of the image
-      Rotate rotate = new Rotate(72 * index, pivotX, pivotY);
+      int pivotX = playerSize / 2;
+      Rotate rotate = new Rotate(72 * index, pivotX, playerSize);
       playerImage.getTransforms().add(rotate);
       playerImage.setTranslateY(-10);
       index++;
@@ -226,7 +219,7 @@ public class MonopolyView implements PositionChangeObserver {
     gameBoard.setGridLinesVisible(false);
     gameBoard.setId("gameBoardFinal");
     updateSideBar();
-    showPlayerCards(game.getPlayers().get(0));
+    showPlayerCards(game.getPlayers().getFirst());
   }
 
   /**
@@ -244,7 +237,7 @@ public class MonopolyView implements PositionChangeObserver {
     Node node = mainLayout.lookup("#" + id);
     Rotate rotate = null;
     if (node != null) {
-      rotate = (Rotate) node.getTransforms().get(0);
+      rotate = (Rotate) node.getTransforms().getFirst();
       ((Pane) node.getParent()).getChildren().remove(node);
     }
     ImageView playerImage = new ImageView(player.getPicture().toExternalForm());
@@ -256,14 +249,11 @@ public class MonopolyView implements PositionChangeObserver {
     stackPane.getChildren().add(playerImage);
 
     Tile tile = game.getBoard().getGameboard().get(player.getPosition() - 1);
-    if (tile instanceof ChanceCardTile chanceCard) {
-      showChanceCard(chanceCard.getActiveChanceCard());
-    } else if (tile instanceof PropertyTile propertyTile) {
-      showProperty(propertyTile.getProperty());
-    } else if (tile instanceof JailTile && player.getJailStatus() == 1) {
-      inJailText(player);
-    } else {
-      clearMiddleCard();
+    switch (tile) {
+      case ChanceCardTile chanceCard -> showChanceCard(chanceCard.getActiveChanceCard());
+      case PropertyTile propertyTile -> showProperty(propertyTile.getProperty());
+      case JailTile ignored when player.getJailStatus() == 1 -> inJailText(player);
+      case null, default -> clearMiddleCard();
     }
 
     Label positionLabel = (Label) mainLayout.lookup("#position" + player.getPlayerNumber());
@@ -285,7 +275,7 @@ public class MonopolyView implements PositionChangeObserver {
             "-fx-background-color: none; -fx-border-color: black; -fx-border-width: 2px; -fx-border-style: solid;");
       }
     }
-
+ 
     diceThrows = 0;
     Label balanceLabel = (Label) mainLayout.lookup("#balance" + player.getPlayerNumber());
     balanceLabel.setText(player.getBalance() + " kr");
@@ -356,7 +346,7 @@ public class MonopolyView implements PositionChangeObserver {
     rect.setFill(Color.valueOf(property.getColor()));
     nameHolder.getChildren().addAll(rect, name);
 
-    if (property.isPawned() == false) {
+    if (!property.isPawned()) {
       card.setStyle(
           "-fx-background-color: white; -fx-border-color: black; -fx-border-width: 2px; -fx-border-style: solid;");
 
@@ -367,7 +357,7 @@ public class MonopolyView implements PositionChangeObserver {
         Label rentText = new Label("Rent with " + i + " houses");
         rentText.setMinWidth(100);
         rentGrid.add(rentText, 0, i);
-        Label rentAmount = new Label(String.valueOf(property.getRent() * (i + 1)) + " kr");
+        Label rentAmount = new Label((property.getRent() * (i + 1)) + " kr");
         rentAmount.setMinWidth(40);
         rentGrid.add(rentAmount, 1, i);
         GridPane.setMargin(rentText, new Insets(5));
@@ -378,7 +368,7 @@ public class MonopolyView implements PositionChangeObserver {
       Label rentText = new Label("Rent with a hotel");
       rentText.setMinWidth(60);
       rentGrid.add(rentText, 0, 4);
-      Label rentAmount = new Label(String.valueOf(property.getRent() * 6) + " kr");
+      Label rentAmount = new Label((property.getRent() * 6) + " kr");
       rentAmount.setMinWidth(20);
       rentGrid.add(rentAmount, 1, 4);
       rentGrid.setGridLinesVisible(true);
@@ -391,10 +381,8 @@ public class MonopolyView implements PositionChangeObserver {
       int currentPropertyLevel = property.getPropertyLevel();
 
       for (Node node : rentGrid.getChildren()) {
-        Integer col = GridPane.getColumnIndex(node);
         Integer row = GridPane.getRowIndex(node);
 
-        col = (col == null) ? 0 : col;
         row = (row == null) ? 0 : row;
 
         if (row == currentPropertyLevel) {
@@ -420,27 +408,21 @@ public class MonopolyView implements PositionChangeObserver {
       card.getChildren().addAll(nameHolder, rentGrid, houseCostText, propertyBuyPrice);
 
       if (property.getOwner() == activePlayer) {
-        pawnButton.setOnAction(e -> {
-          monopolyController.pawnProperty(property);
-        });
+        pawnButton.setOnAction(e -> monopolyController.pawnProperty(property));
         if (property.getPropertyLevel() < 5) {
 
-          buyHouseButton.setOnAction(e -> {
-            monopolyController.buyPropertyHouse(property);
-          });
+          buyHouseButton.setOnAction(e -> monopolyController.buyPropertyHouse(property));
           houseButtons.getChildren().add(buyHouseButton);
         }
         if (property.getPropertyLevel() > 0) {
-          sellHouseButton.setOnAction(e -> {
-            monopolyController.sellPropertyHouse(property);
-          });
+          sellHouseButton.setOnAction(e -> monopolyController.sellPropertyHouse(property));
           houseButtons.getChildren().add(sellHouseButton);
         }
         card.getChildren().addAll(centerPawnButton, centerHouseButtons);
       }
       return card;
 
-    } else if (property.isPawned() == true) {
+    } else if (property.isPawned()) {
 
       Button rePurchaseButton = new Button("Re-purchase property");
       rePurchaseButton.setOnAction(e -> {
@@ -460,7 +442,6 @@ public class MonopolyView implements PositionChangeObserver {
   }
 
   int diceThrows = 0;
-
   Player activePlayer;
 
   /**
@@ -473,7 +454,7 @@ public class MonopolyView implements PositionChangeObserver {
 
     throwDice.setOnAction(e -> {
       activePlayer = game.getPlayers().get(game.getActivePlayer());
-      if (game.getGameStatus() == true && activePlayer.getJailStatus() == 0) {
+      if (game.getGameStatus() && activePlayer.getJailStatus() == 0) {
         monopolyController.throwDice(game, activePlayer);
       } else if (activePlayer.getJailStatus() >= 1) {
         inJailOptions(activePlayer);
@@ -482,7 +463,7 @@ public class MonopolyView implements PositionChangeObserver {
 
     Button tradeButton = new Button("Trade");
     tradeButton.setOnAction(e -> {
-      if (game.getGameStatus() == true) {
+      if (game.getGameStatus()) {
         TradeView tradeView = new TradeView();
         tradeView.showTradeView(game, activePlayer);
       } else {
@@ -657,17 +638,13 @@ public class MonopolyView implements PositionChangeObserver {
     VBox optionBox = new VBox(10);
     if (player.getJailCard()) {
       Button freeCardButton = new Button("Use get out of jail free card");
-      freeCardButton.setOnAction(e -> {
-        monopolyController.useJailCard(player, game);
-      });
+      freeCardButton.setOnAction(e -> monopolyController.useJailCard(player, game));
       optionBox.getChildren().add(freeCardButton);
     }
 
     if (player.getBalance() >= 2000) {
       Button payButton = new Button("Pay to get out of jail");
-      payButton.setOnAction(e -> {
-        monopolyController.payForJail(player, game);
-      });
+      payButton.setOnAction(e -> monopolyController.payForJail(player, game));
       optionBox.getChildren().add(payButton);
     }
 
